*** empty log message ***

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,11 @@
-buildname=xmlt
+buildname=xmlt-tests
 
-build_classpath=${commons-logging};${i_persistence};${params};${xmlt};${tests}
+build_classpath=${junit};\r\
+${commons-logging};\r\
+${i_persistence};\r\
+${params};\r\
+${xmlt};\r\
+${tests};
 
 
 
