*** empty log message ***

--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,7 @@
 buildname=xmlt-tests
 
-build_classpath=${junit};\r\
-${commons-logging};\r\
+build_classpath=${user_junit};\r\
+${user_commons-logging};\r\
 ${i_persistence};\r\
 ${params};\r\
 ${xmlt};\r\
