inter build issues

--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,9 @@
 buildname=xmlt-tests
 
 build_classpath=${user_junit};\r\
-${user_commons-logging};\r\
-${i_persistence};\r\
+${i_util};\r\
+${i_log};\r\
+${j2se_util};\r\
 ${params};\r\
 ${xmlt};\r\
 ${tests};
