--- a/build.xml
+++ b/build.xml
@@ -1,91 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project basedir="." default="compile" name="treefinder">
-  <!-- this build file is generic and is designed to be used for
-      all of the adligo builds that simply build a jar file
-      version 1.1
-  -->
-
-  <property file="${user.home}/conf/adligo/user.properties"
-          description="properties that tailor the build to your computer."/>
-  <property file="${user.home}/conf/adligo/adligo_lib.properties"/>
-  <property file="build.properties" />
-
-
-  <target name="set-property-values" >
-    <taskdef name="tag" classname="org.adligo.ant.Tag"/><tag/>
-    <!-- this just saves state for the other builds-->
-
-    <propertyfile file="${user.home}/conf/adligo_lib.properties">
-          <entry key="${buildname}"
-          value="${user_jar_destination}${buildname}${tag}.jar"/>
-          <entry key="${buildname}_jarname"
-          value="${buildname}${tag}.jar"/>
-    </propertyfile>
-    <!-- this sets the property for the rest of this build-->
-    <property name="me" value="${user_jar_destination}${buildname}${tag}.jar"/>
-  </target>
-
-  <target name="jar" depends="compile">
-  	  <delete quiet="false" failonerror="false" file="${me}" />
-      <jar destfile="${me}" basedir="classes/"/>
-  </target>
-
-  <target name="sign" depends="jar">
-    <signjar alias="${user_keyname}" keystore="${user_keystore}" jar="${me}"
-          storepass="${user_storepass}"
-          keypass="${user_keypass}"
-          />
-  </target>
-
-  <target name="classpath" depends="set-property-values">
-      <echo>${build_classpath}</echo>
-  </target>
-
-  <target name="compile" depends="set-property-values">
-    <delete quiet="true" includeEmptyDirs="true">
-      <fileset dir="classes" />
-    </delete>
-    <mkdir dir="classes"/>
-    <javac destdir="classes" debug="yes" deprecation="yes">
-       <classpath path="${build_classpath}"/>
-       <src path="src"/>
-       <include name="**/*.java"/>
-    </javac>
-    <copy todir="classes">
-      <fileset dir="src" excludes="**/*.java"/>
-    </copy>
-  </target>
-	
-  <target name="test" depends="set-property-values">
-
-    <property file="${user.home}/conf/adligo_lib.properties"/>
-    <property file="build.properties" />
-    <echo> ${build_classpath}${me};</echo>
-
-    <java fork="true" classname="junit.textui.TestRunner"
-        taskname="junit" failonerror="false" output="test_results" >
-        <classpath>
-          <pathelement path="${build_classpath}${me};" />
-        </classpath>
-        <arg value="org.adligo.tests.xml.parsers.template.Suite"/>
-    </java>
-
-    <echo> ${user_emails}</echo>
-    <mail from="tests@adligo.com" tolist="${user_emails}" messagefile="test_results"
-        mailhost="mail.adligo.com" subject="test_results"/>
-  </target>
-	
-  <target name="swing-test" depends="set-property-values, jar">
-	    <property file="${user.home}/conf/adligo_lib.properties"/>
-	    <property file="build.properties" />
-	    <echo> ${build_classpath}${buildname};</echo>
-
-	    <java fork="true" classname="junit.swingui.TestRunner"
-	        taskname="junit" failonerror="false" output="test_results" >
-	        <classpath>
-	          <pathelement path="${build_classpath}${me};" />
-	        </classpath>
-	        <arg value="org.adligo.tests.xml.parsers.template.Suite"/>
-	    </java>
-	  </target>
+<project basedir="." default="jar" name="xmlt-tests">
+	<property file="${user.home}/conf/adligo/user.properties"
+			          description="properties that tailor the build to your computer."/>
+	<property file="${user.home}/conf/adligo/adligo_lib.properties"/>
+	<property file="build.properties" />
+	<import file="${user.home}/conf/adligo/build.xml"/>
 </project>
