--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 buildname=xmlt-tests
 
-build_classpath=${user_junit_3_8};\r\
+build_classpath=${user_junit_4_4_5};\r\
 ${i_util};\r\
 ${i_log};\r\
 ${j2se_util};\r\
