--- a/build.properties
+++ b/build.properties
@@ -1,13 +1,13 @@
 buildname=xmlt-tests
 
-build_classpath=${user_junit_4_4_5};\r\
-${i_util};\r\
-${i_log};\r\
-${j2se_util};\r\
-${params};\r\
-${xmlt};\r\
-${tests};\r\
-${hsqldb_1_8_jar};\r\
+build_classpath=${user_junit_4_4_5};\n\r\
+${i_util};\n\r\
+${i_log};\n\r\
+${j2se_util};\n\r\
+${params};\n\r\
+${xmlt};\n\r\
+${tests};\n\r\
+${hsqldb_1_8_jar};
 
 
 
