removing j2se replacing with jse

--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/tests"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/i_log"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/j2se_util"/>
 	<classpathentry kind="var" path="HSQLDB_HOME/lib/hsqldb.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jse_util"/>
 	<classpathentry kind="output" path="classes_e"/>
 </classpath>
