--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,7 @@ buildname=xmlt-tests
 build_classpath=${user_junit_4_4_5};\n\r\
 ${i_util};\n\r\
 ${i_log};\n\r\
-${j2se_util};\n\r\
+${jse_util};\n\r\
 ${params};\n\r\
 ${xmlt};\n\r\
 ${tests};\n\r\
