moving classpath to maven repo

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 buildname=xmlt-tests
 
-build_classpath=${user_junit_4_4_5};\n\r\
+build_classpath=${user_junit_4plus};\n\r\
 ${i_util};\n\r\
 ${i_log};\n\r\
 ${jse_util};\n\r\
