--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project basedir="." default="test" name="xmlt-tests">
-	<import file="${user.home}/conf/adligo/build.xml"/>
+<project basedir="." default="jar_and_test" name="xmlt-tests">
+	<import file="${user.home}/conf/adligo/jse-test-build.xml"/>
 </project>
