--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 buildname=xmlt_tests
 
-build_manifest_name=/org/adligo/xml/parsers/template/tests
-build_manifest_extension_name=org.adligo.xml.parsers.template.tests
-build_manifest_implementation_title=org.adligo.xml.parsers.template.tests
+build_manifest_name=/org/adligo/xml/parsers/template_tests
+build_manifest_extension_name=org.adligo.xml.parsers.template_tests
+build_manifest_implementation_title=org.adligo.xml.parsers.template_tests
 
 
 build_classpath=${user_junit_4plus};\n\r\
