namespace verification cleanup

--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,8 @@ buildname=xmlt_tests
 build_namespace=org.adligo.xml.parsers.template_tests
 
 
-build_classpath=${user_junit_4plus};\n\r\
+build_classpath=${basedir}/src_runtime;\n\r\
+${user_junit_4plus};\n\r\
 ${i_util};\n\r\
 ${i_log};\n\r\
 ${jse_util};\n\r\
