Adding to project group.

--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="/xmlt"/>
-	<classpathentry kind="src" path="/params"/>
+	<classpathentry kind="src" path="/xmlt.adligo.org"/>
+	<classpathentry kind="src" path="/params.adligo.org"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/tests"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tests.adligo.org"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/i_log"/>
-	<classpathentry kind="var" path="MVN_REPO/hsqldb/hsqldb/1.8.0.7/hsqldb-1.8.0.7.jar"/>	
-	<classpathentry combineaccessrules="false" kind="src" path="/jse_util"/>
+	<classpathentry kind="var" path="MVN_REPO/hsqldb/hsqldb/1.8.0.7/hsqldb-1.8.0.7.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jse_util.adligo.org"/>
 	<classpathentry kind="output" path="classes_e"/>
 </classpath>
