--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>xmlt_tests</name>
+	<name>xmlt_tests.adligo.org</name>
 	<comment></comment>
 	<projects>
 	</projects>
